--- a/main.css
+++ b/main.css
@@ -48,26 +48,26 @@ body {
 #container {
 	display: grid;
 	grid-template-rows: auto auto auto auto auto auto 1fr;
-	grid-template-columns: 1fr auto 1fr;
+	grid-template-columns: 2fr auto 1fr 1fr;
 	grid-template-areas:
-		"rules status ."
-		"rules board blackContainer"
-		"rules board blackTimer"
-		"rules board centerContainer"
-		"rules board whiteTimer"
-		"rules board whiteContainer"
-		"rules footer .";
+		"rules status . gameSettings"
+		"rules board blackContainer gameSettings"
+		"rules board blackTimer gameSettings"
+		"rules board centerContainer gameSettings"
+		"rules board whiteTimer gameSettings"
+		"rules board whiteContainer gameSettings"
+		"rules footer . gameSettings";
 }
 
 #container.flipped {
 	grid-template-areas:
-		"rules status ."
-		"rules board whiteContainer"
-		"rules board whiteTimer"
-		"rules board centerContainer"
-		"rules board blackTimer"
-		"rules board blackContainer"
-		"rules footer .";
+		"rules status . gameSettings"
+		"rules board whiteContainer gameSettings"
+		"rules board whiteTimer gameSettings"
+		"rules board centerContainer gameSettings"
+		"rules board blackTimer gameSettings"
+		"rules board blackContainer gameSettings"
+		"rules footer . gameSettings";
 }
 
 #container.flipped .whiteContainer {
@@ -204,6 +204,58 @@ body {
 
 .whiteContainer > * {
 	margin: 5px 0;
+}
+
+.gameSettings {
+	grid-area: gameSettings;
+	padding: 15px;
+	margin: 0 25px 0 0;
+	border: 2px solid black;
+}
+
+.scrollOuter {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+.scrollInner {
+	position: absolute;
+	left: 0;
+ 	right: 0;
+ 	top: 0;
+	bottom: 0;
+	overflow: auto;
+}
+
+.gameSettings .scrollInner {
+	overflow-x: hidden;
+	margin: 0 -15px 30px 0;
+}
+
+.lobbyCodeWrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	margin: 0 -15px;
+	padding: 0 15px 15px;
+	border-bottom: 2px solid black;
+}
+
+#lobbyCodeInput {
+	margin: 0 10px;
+}
+
+#createLobby {
+	margin-left: 10px;
+}
+
+#gameSettingsForm {
+	display: flex;
+	flex-direction: column;
+	margin: 15px 0;
 }
 
 .Board {
